add new register

--- a/login_pages/register.html
+++ b/login_pages/register.html
@@ -3,60 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register | ThesEase</title>
+    <title>Register - ThesEase</title>
     <link rel="stylesheet" href="register.css">
 </head>
 <body>
-    <div class="register-container">
-        <div class="left-section">
-            <div class="image-box">
-                <img src="../images/login1.png" alt="Left Image">
-            </div>
-            <div class="left-top-text">
-                <h1>Your Research, Our Platform<br>Sign Up and Begin</h1>
-            </div>
-            <div class="left-bottom-text">
-                <h2>Redefining Academic Submissions for a Digital Age.</h2>
-            </div>
+    <!-- Logo Section -->
+    <div class="top-logo">
+        <img src="../images/buksulogo.png" alt="ThesEase Logo">
+    </div>
+
+    <div class="container">
+        <!-- Left Image Section -->
+        <div class="left-image-box">
+            <img src="../images/register1.png" alt="Research Platform">
         </div>
 
-        <div class="register-box">
-            <h2>Create Account</h2>
-            <form>
-                <div class="input-group">
-                    <input type="text" placeholder="Student ID">
+        <!-- Register Form Section -->
+        <div class="register-container">
+            <div class="register-box">
+                <!-- Logo and Header inside the box -->
+                <div class="logo-container">
+                    <h1>ThesEase</h1>
+                    <p>Create a new Account</p>
                 </div>
-                <div class="input-group">
-                    <input type="text" placeholder="First Name">
-                </div>
-                <div class="input-group">
-                    <input type="text" placeholder="Last Name">
-                </div>
-                <div class="input-group">
-                    <input type="date" placeholder="Birthday">
-                </div>
-                <div class="input-group">
-                    <input type="email" placeholder="Email">
-                </div>
-                <div class="input-group">
-                    <input type="password" placeholder="Password">
-                </div>
-                <div class="input-group">
-                    <input type="text" placeholder="Contact Number">
-                </div>
-                <div class="input-group">
-                    <input type="text" placeholder="Department">
-                </div>
-                <div class="input-group">
-                    <input type="text" placeholder="Course">
-                </div>
-                <div class="input-group">
-                    <input type="text" placeholder="Year">
-                </div>
-                <button class="register-btn" type="submit">Register</button>
-            </form>
-            <div class="extra-options">
-                <p>Already have an account? <a href="login.html">Login here</a></p>
+
+                <form>
+                    <div class="input-group">
+                        <label for="student-id">Student ID</label>
+                        <input type="text" id="student-id" placeholder="Enter Student ID">
+                    </div>
+
+                    <div class="input-group side-by-side">
+                        <div class="side">
+                            <label for="first-name">First Name</label>
+                            <input type="text" id="first-name" placeholder="First Name">
+                        </div>
+                        <div class="side">
+                            <label for="last-name">Last Name</label>
+                            <input type="text" id="last-name" placeholder="Last Name">
+                        </div>
+                    </div>
+
+                    <div class="input-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" placeholder="Enter Email">
+                    </div>
+
+                    <div class="input-group side-by-side">
+                        <div class="side">
+                            <label for="phone">Phone Number</label>
+                            <input type="tel" id="phone" placeholder="Phone Number">
+                        </div>
+                        <div class="side">
+                            <label for="birthday">Birthday</label>
+                            <input type="date" id="birthday">
+                        </div>
+                    </div>
+
+                    <div class="input-group">
+                        <label>Gender</label>
+                        <div class="gender-group">
+                            <input type="radio" id="male" name="gender">
+                            <label for="male">Male</label>
+
+                            <input type="radio" id="female" name="gender">
+                            <label for="female">Female</label>
+
+                            <input type="radio" id="custom" name="gender">
+                            <label for="custom">Custom</label>
+                        </div>
+                    </div>
+
+                    <div class="input-group">
+                        <label for="department">Department</label>
+                        <input type="text" id="department" placeholder="Department">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="course-year">Course & Year</label>
+                        <input type="text" id="course-year" placeholder="Course & Year">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" placeholder="Enter Password">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="confirm-password">Confirm Password</label>
+                        <input type="password" id="confirm-password" placeholder="Confirm Password">
+                    </div>
+
+                    <button type="submit" class="register-btn">Register</button>
+
+                    <div class="separator">or</div>
+
+                    <button type="button" class="google-btn">
+                        <img src="../images/google.jpg" alt="Google Logo"> Sign up with Google
+                    </button>
+                    <div class="extra-options">
+                       
+                        <p>Already have an account <a href="#">Login Now</a></p>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
