--- a/student_pages/home.html
+++ b/student_pages/home.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Dashboard</title>
-  <link rel="stylesheet" href="dashboard.css">
+  <link rel="stylesheet" href="home.css">
 </head>
 <body>
   <!-- Sidebar -->
   <aside class="sidebar">
     <img src="../images/buksulogo.png" alt="Logo" class="sidebar-logo">
     <nav class="sidebar-nav">
-      <a href="dashboard.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="submission.html">Thesis Submissions</a>
       <a href="notifications.html">Notifications</a>
       <a href="messages.html">Messages</a>
