--- a/student_pages/submission.html
+++ b/student_pages/submission.html
@@ -11,7 +11,7 @@
   <aside class="sidebar">
     <img src="../images/buksulogo.png" alt="Logo" class="sidebar-logo">
     <nav class="sidebar-nav">
-      <a href="dashboard.html">Home</a>
+      <a href="home.html">Home</a>
       <a href="submission.html">Thesis Submissions</a>
       <a href="notifications.html">Notifications</a>
       <a href="messages.html">Messages</a>
