--- a/student_pages/notifications.html
+++ b/student_pages/notifications.html
@@ -10,7 +10,7 @@
     <div class="sidebar">
         <img src="../images/buksulogo.png" alt="Logo" class="sidebar-logo">
         <div class="sidebar-nav">
-            <a href="dashboard.html">Home</a>
+            <a href="home.html">Home</a>
       <a href="submission.html">Thesis Submissions</a>
       <a href="notifications.html">Notifications</a>
       <a href="messages.html">Messages</a>
